--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ table{
   min-width:70%;
 }
 tr{
-  backgroung-color:#fff;
+  background-color:#fff;
 }
 tr:nth-child(2n){
   background-color:#f9f9f9;
